WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171513
API test WebKit2.WebsiteDataStoreCustomPaths is failing on ios-simulator
https://bugs.webkit.org/show_bug.cgi?id=171513
Summary
API test WebKit2.WebsiteDataStoreCustomPaths is failing on ios-simulator
Ryan Haddad
Reported
2017-05-01 14:20:18 PDT
[ios-simulator] API test WebKit2.WebsiteDataStoreCustomPaths is failing FAIL WebKit2.WebsiteDataStoreCustomPaths /Volumes/Data/slave/ios-simulator-10-release/build/Tools/TestWebKitAPI/Tests/WebKit2Cocoa/WebsiteDataStoreCustomPaths.mm:126 Value of: [[NSFileManager defaultManager] fileExistsAtPath:cookieStoragePath.path] Actual: true Expected: false
https://build.webkit.org/builders/Apple%20iOS%2010%20Simulator%20Release%20WK2%20%28Tests%29/builds/1033
Attachments
Patch
(2.40 KB, patch)
2017-05-04 14:00 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch
(4.09 KB, patch)
2017-05-05 16:02 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch
(4.16 KB, patch)
2017-05-05 16:16 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch
(5.60 KB, patch)
2017-05-05 16:25 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2017-05-01 14:22:21 PDT
This seems to have started with
http://trac.webkit.org/changeset/215941
Ryan Haddad
Comment 2
2017-05-02 15:27:12 PDT
Brady, do you have time to take a look at this?
Brady Eidson
Comment 3
2017-05-02 15:49:43 PDT
(In reply to Ryan Haddad from
comment #2
)
> Brady, do you have time to take a look at this?
In a little bit.
Radar WebKit Bug Importer
Comment 4
2017-05-03 17:21:20 PDT
<
rdar://problem/31977294
>
Brady Eidson
Comment 5
2017-05-03 19:45:12 PDT
I can get to this tomorrow afternoon - In meantime somebody with a fresh checkout (I don't have one available tonight) can just wrap the entire test with an #if PLATFORM(MAC) to stop it messing up iOS bots
Brady Eidson
Comment 6
2017-05-04 14:00:22 PDT
Created
attachment 309099
[details]
Patch
WebKit Commit Bot
Comment 7
2017-05-04 14:42:26 PDT
Comment on
attachment 309099
[details]
Patch Clearing flags on attachment: 309099 Committed
r216210
: <
http://trac.webkit.org/changeset/216210
>
WebKit Commit Bot
Comment 8
2017-05-04 14:42:28 PDT
All reviewed patches have been landed. Closing bug.
Brady Eidson
Comment 9
2017-05-04 15:14:06 PDT
That was just to skip the test for now - This bug still needs to remain open.
Brady Eidson
Comment 10
2017-05-05 16:02:28 PDT
Created
attachment 309229
[details]
Patch
Brady Eidson
Comment 11
2017-05-05 16:16:30 PDT
Created
attachment 309235
[details]
Patch
Brady Eidson
Comment 12
2017-05-05 16:25:27 PDT
Created
attachment 309238
[details]
Patch
WebKit Commit Bot
Comment 13
2017-05-05 17:08:45 PDT
Comment on
attachment 309238
[details]
Patch Clearing flags on attachment: 309238 Committed
r216297
: <
http://trac.webkit.org/changeset/216297
>
WebKit Commit Bot
Comment 14
2017-05-05 17:08:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug