API test WebKit2.WebsiteDataStoreCustomPaths is failing on ios-simulator. <rdar://problem/31977294> and https://bugs.webkit.org/show_bug.cgi?id=171513

Reviewed by Andy Estes.

Source/WebCore:

Covered by API test.

* platform/spi/cf/CFNetworkSPI.h:

Source/WebKit2:

* NetworkProcess/cocoa/NetworkProcessCocoa.mm:
(WebKit::NetworkProcess::syncAllCookies):

Tools:

* TestWebKitAPI/Tests/WebKit2Cocoa/WebsiteDataStoreCustomPaths.mm:
(TEST):


Canonical link: https://commits.webkit.org/188668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216297 268f45cc-cd09-0410-ab3c-d52691b4dbfc